LetsPlay/wwwroot/StyleSheet.css
#messagesList {
    height: 350px;
    overflow-y: scroll;
    border: 3px solid #eeeeee;
    border-radius: 10px;
    padding: 5px;
    width: 100%;
}


.messageBlockContainer {
    width: 80%;
    margin: 0 auto;
}

#messageInput {
    border: 3px solid #eeeeee;
    border-radius: 10px;
}

.bold {
    font-weight: bold;
}
.contain {
    width: 100%;
}

.messageBlock {
    display: block;
    width: 100%;
}

.clearFix:after {
    content: '';
    clear: both;
    display: table;
}

.otherMessage {
    color: black;
    background-color: #eeeeee;
    border-radius: 8px;
    max-width: 50%;
    display: inline-block;
    padding: 10px 10px 12px 10px;
    float: left;
    line-height: 1.3;
}

.myMessage {
    color: white;
    background-color: #2e4c7c;
    border-radius: 8px;
    max-width: 50%;
    padding: 10px 10px 12px 10px;
    float: right;
    clear: both;
    text-wrap: normal;
    overflow-wrap: break-word;
    text-align: left;
    line-height: 1.3;
}

.alignRight{
    /*text-align: right;*/
    float:right;
}

.profile-nav {
    position: absolute;
    bottom: 60px;
    width: 100%;
    background-color: #1c273a;
}

.requests-box {
    padding: 30px;
    position: fixed;
    bottom: 35px;
    left: 250px;
    display: none;
    background-color: #1c2e43;
}

.topBanner {
    position: fixed;
    top: 0px;
    left: -50px;
    z-index: -1;
    max-height: 400px;
    max-width: 105%;
    text-align: center;
}

.topBannerVideo {
    width: 100%;
}

.vidContainer {
    overflow: hidden;
    display: block;
    position: fixed;
    top: 0px;
    left: -50px;
    z-index: -1;
    height: 400px;
    min-width: 105%;
    text-align: center;
    box-shadow: 1px 1px 3px 1px rgba(13, 13, 13, 0.16);
}

.logOutButton {
    position: absolute;
    bottom: 5px;
}

.logo {
    position: absolute;
    top: 150px;
    /*right: 40px;*/
    z-index: 0;
    width: 300px;
}

.postTitle {
    margin-left: 10px;
}
.card {
    margin: 10px;
    min-height: 300px;
}

.card-body {
    display: flex;
    flex-direction: column;
}
.cardHost {
    margin-top: auto;
}

.homeContent {
    position: fixed;
    /*right: 0;*/
    overflow: scroll;
    top: 400px;
    height: 70%;
}

.contentInnerWrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

.friends-box {
    padding: 30px;
    position: fixed;
    bottom: 10px;
    right: 80px;
    display: none;
    background-color: #1c2e43;
}

.centerplz {
    text-align: center;
}

.friendsButton {
    position: fixed;
    width: 70px;
    right: 10px;
    bottom: 10px;
}

.closeNots {
    position: absolute;
    top: 5px;
    right: 5px;
}

.notNum {
    position: absolute;
    right: 10px;
}

.allContent {
    margin-left: 300px;
    z-index: 0;
    margin-top: 70px;
}

/* The side navigation menu */
.sidenav {
    position: fixed;
    min-width: 250px;
    max-width: 250px;
    height: 100%;
    background-color: #1c2e43;
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 60px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
    z-index: 1;
}

    /* The navigation menu links */
    .sidenav a {
        padding: 8px 8px 8px 32px;
        text-decoration: none;
        font-size: 25px;    
        color: darkgray;
        display: block;
        transition: 0.3s;
    }

        /* When you mouse over the navigation links, change their color */
        .sidenav a:hover {
            color: #f1f1f1;
        }

    /* Position and style the close button (top right corner) */
    .sidenav .closebtn {
        position: absolute;
        top: 0;
        right: 25px;
        font-size: 36px;
        margin-left: 50px;
    }

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
    position: absolute;
    /*transition: margin-left .5s;*/
    padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {
        padding-top: 15px;
    }

        .sidenav a {
            font-size: 18px;
        }
}

@media screen and (max-width: 767px) {
    .sidenav {
        height: 40%;
        text-align: center;
    }
}

